# chemtui

./: CMakeLists.txt  h2.xyz
docs/: Doxyfile
docs/html/: dir_6c407033f16f190eb12caab0350c17f4.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  doxygen_crawl.html  index.html  index.js  md_source_2index.html  navtreedata.js  navtreeindex0.js  page.html  pages.html
docs/html/search/: all_1.js  all_3.js  pages_0.js  pages_2.js  searchdata.js
docs/latex/: index.tex  md_source_2index.tex  refman.tex
docs/source/: conf.py  index.md  index.rst  usage.rst
docs/source/building/: index.md
src/: main.cpp
